[gd_scene load_steps=3 format=3 uid="uid://3st5s0ue3nj4"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_trih8"]
[ext_resource type="FontFile" uid="uid://dwrv8an6hlp45" path="res://assets/font/ethnocentric rg.ttf" id="2_ut74y"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_trih8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
custom_minimum_size = Vector2(340, 120)
layout_mode = 2
offset_right = 1280.0
offset_bottom = 120.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cheats" type="Label" parent="ColorRect/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ut74y")
theme_override_font_sizes/font_size = 32
text = "Cheats"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Player" type="Label" parent="ColorRect/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ut74y")
theme_override_font_sizes/font_size = 32
text = "Player"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Enemy" type="Label" parent="ColorRect/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ut74y")
theme_override_font_sizes/font_size = 32
text = "Enemy"
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="World" type="Label" parent="ColorRect/HBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ut74y")
theme_override_font_sizes/font_size = 32
text = "World"
horizontal_alignment = 1

[node name="CheatsVBox" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -600.0
offset_right = 320.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CheatsVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CheatsVBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="energyCheat" type="Label" parent="ColorRect/CheatsVBox/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Unlimited Energy"

[node name="EnergyButton" type="CheckButton" parent="ColorRect/CheatsVBox/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/CheatsVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CheatsVBox/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="healthCheat" type="Label" parent="ColorRect/CheatsVBox/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Unlimited Health"

[node name="HealthButton" type="CheckButton" parent="ColorRect/CheatsVBox/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/CheatsVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CheatsVBox/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="shieldCheat" type="Label" parent="ColorRect/CheatsVBox/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Unlimited Shield"

[node name="ShieldButton" type="CheckButton" parent="ColorRect/CheatsVBox/MarginContainer3/HBoxContainer"]
layout_mode = 2

[node name="PlayerVBox" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = -600.0
offset_right = 640.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/PlayerVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PlayerVBox/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="playerShield" type="Label" parent="ColorRect/PlayerVBox/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player Shield"

[node name="player_shield_button" type="CheckButton" parent="ColorRect/PlayerVBox/MarginContainer2/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="DamageContainer" type="MarginContainer" parent="ColorRect/PlayerVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PlayerVBox/DamageContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="playerDamage" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Laser Damage"

[node name="damageEnabled" type="CheckButton" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="damageSlider" type="HSlider" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer"]
layout_mode = 2
step = 5.0
value = 20.0
tick_count = 11
ticks_on_borders = true

[node name="damageTickMarks" type="HBoxContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 3

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks/MarginContainer"]
layout_mode = 2
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 37

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks/MarginContainer2"]
layout_mode = 2
text = "20"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 34

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks/MarginContainer3"]
layout_mode = 2
text = "40"

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks/MarginContainer4"]
layout_mode = 2
text = "60"

[node name="MarginContainer5" type="MarginContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 33

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks/MarginContainer5"]
layout_mode = 2
text = "80"

[node name="MarginContainer6" type="MarginContainer" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 22

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageTickMarks/MarginContainer6"]
layout_mode = 2
text = "100"

[node name="SpeedContainer" type="MarginContainer" parent="ColorRect/PlayerVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PlayerVBox/SpeedContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="maxSpeed" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Max Speed"

[node name="speedEnabled" type="CheckButton" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="speedSlider" type="HSlider" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer"]
layout_mode = 2
max_value = 1000.0
step = 50.0
value = 400.0
tick_count = 11
ticks_on_borders = true

[node name="speedTickMarks" type="HBoxContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 3

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks/MarginContainer"]
layout_mode = 2
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks/MarginContainer2"]
layout_mode = 2
text = "200"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks/MarginContainer3"]
layout_mode = 2
text = "400"

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks/MarginContainer4"]
layout_mode = 2
text = "600"

[node name="MarginContainer5" type="MarginContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks/MarginContainer5"]
layout_mode = 2
text = "800"

[node name="MarginContainer6" type="MarginContainer" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 27

[node name="Label" type="Label" parent="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedTickMarks/MarginContainer6"]
layout_mode = 2
text = "1k"

[node name="EnemyVBox" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -600.0
offset_right = -320.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/EnemyVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/EnemyVBox/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 0

[node name="enemyShield" type="Label" parent="ColorRect/EnemyVBox/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Enemy Shield"

[node name="enemy_shield_button" type="CheckButton" parent="ColorRect/EnemyVBox/MarginContainer3/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/EnemyVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/EnemyVBox/MarginContainer4"]
layout_mode = 2
size_flags_vertical = 0

[node name="enemyMovement" type="Label" parent="ColorRect/EnemyVBox/MarginContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Enemy Move"

[node name="moveButton" type="CheckButton" parent="ColorRect/EnemyVBox/MarginContainer4/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="WorldVBox" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -600.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/WorldVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Reset" type="Button" parent="ColorRect/WorldVBox/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Reset World"

[node name="DamageContainer2" type="MarginContainer" parent="ColorRect/WorldVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/WorldVBox/DamageContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="WorldBorder" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "World Border Coords"

[node name="borderToggle" type="CheckButton" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="borderSlider" type="HSlider" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer"]
layout_mode = 2
min_value = 1000.0
max_value = 50000.0
step = 5000.0
value = 21000.0
tick_count = 11
ticks_on_borders = true

[node name="borderTickMarks" type="HBoxContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="Label" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks/MarginContainer"]
layout_mode = 2
text = "1k"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 28

[node name="Label" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks/MarginContainer2"]
layout_mode = 2
text = "10k"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 26

[node name="Label" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks/MarginContainer3"]
layout_mode = 2
text = "20k"

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="Label" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks/MarginContainer4"]
layout_mode = 2
text = "30k"

[node name="MarginContainer5" type="MarginContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 26

[node name="Label" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks/MarginContainer5"]
layout_mode = 2
text = "40k"

[node name="MarginContainer6" type="MarginContainer" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Label" type="Label" parent="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderTickMarks/MarginContainer6"]
layout_mode = 2
text = "50k"

[node name="MarginContainer5" type="MarginContainer" parent="ColorRect/WorldVBox"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/WorldVBox/MarginContainer5"]
layout_mode = 2
size_flags_vertical = 0

[node name="enemyMovement" type="Label" parent="ColorRect/WorldVBox/MarginContainer5/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "vSync:"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/WorldVBox/MarginContainer5/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 41

[node name="vsyncSelect" type="OptionButton" parent="ColorRect/WorldVBox/MarginContainer5/HBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Enabled"
popup/item_0/id = 0
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Disabled"
popup/item_2/id = 2

[connection signal="toggled" from="ColorRect/CheatsVBox/MarginContainer/HBoxContainer/EnergyButton" to="." method="_on_energy_button_toggled"]
[connection signal="toggled" from="ColorRect/CheatsVBox/MarginContainer2/HBoxContainer/HealthButton" to="." method="_on_health_button_toggled"]
[connection signal="toggled" from="ColorRect/CheatsVBox/MarginContainer3/HBoxContainer/ShieldButton" to="." method="_on_shield_button_toggled"]
[connection signal="toggled" from="ColorRect/PlayerVBox/MarginContainer2/HBoxContainer/player_shield_button" to="." method="_on_player_shield_button_toggled"]
[connection signal="toggled" from="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/HBoxContainer/damageEnabled" to="." method="_on_damage_enabled_toggled"]
[connection signal="value_changed" from="ColorRect/PlayerVBox/DamageContainer/VBoxContainer/damageSlider" to="." method="_on_damage_slider_value_changed"]
[connection signal="toggled" from="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/HBoxContainer/speedEnabled" to="." method="_on_speed_enabled_toggled"]
[connection signal="value_changed" from="ColorRect/PlayerVBox/SpeedContainer/VBoxContainer/speedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="toggled" from="ColorRect/EnemyVBox/MarginContainer3/HBoxContainer/enemy_shield_button" to="." method="_on_enemy_shield_button_toggled"]
[connection signal="toggled" from="ColorRect/EnemyVBox/MarginContainer4/HBoxContainer/moveButton" to="." method="_on_move_button_toggled"]
[connection signal="pressed" from="ColorRect/WorldVBox/MarginContainer4/Reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/HBoxContainer/borderToggle" to="." method="_on_border_toggle_toggled"]
[connection signal="value_changed" from="ColorRect/WorldVBox/DamageContainer2/VBoxContainer/borderSlider" to="." method="_on_border_slider_value_changed"]
[connection signal="item_selected" from="ColorRect/WorldVBox/MarginContainer5/HBoxContainer/vsyncSelect" to="." method="_on_vsync_select_item_selected"]
